profilelist1exp/unpackaged/objects/Exception__c.object
<CustomObject>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Account Country of Failed Opportunity in LOB Auto Creation</description>
        <formula>TEXT(Opportunity_Failed__r.End_User_Mailing_Country__c)</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMC_Opportunity_ID__c</fullName>
        <description>Display the 15 or 18 character SFDC GUID as supplied boomi (Opportunity ID, not Deal ID)</description>
        <label>EMC Opportunity ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMC_Opportunity_Number__c</fullName>
        <description>EMC Opportunity Number is similar to Dell main Deal ID. To be used by Boomi</description>
        <label>EMC Opportunity Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Codes__c</fullName>
        <label>Error Codes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Messages__c</fullName>
        <label>Error Messages</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_ThreshHold_Validation__c</fullName>
        <label>Deal Has Passed Threshold?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Fail_Attempts__c</fullName>
        <label>No Of Fail Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <label>Object ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_type__c</fullName>
        <label>Object type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Undelete</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Failed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of Failed Opportunity in LOB Auto Creation</description>
        <formula>Opportunity_Failed__r.Account.Regional_Parent_Name_lookup__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Item_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Item (Lookup)</label>
        <referenceTo>Work_Items__c</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>Batch_PTR</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Name__c</field>
            <operation>equals</operation>
            <value>PTR Insert</value>
        </filters>
        <label>Batch PTR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deal_Reg_Customer_Selection_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Name__c</field>
            <operation>equals</operation>
            <value>Deal Reg Customer Selection</value>
        </filters>
        <label>Deal Reg Customer Selection Exceptions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMC_Core_Exception</fullName>
        <columns>NAME</columns>
        <columns>Object_ID__c</columns>
        <columns>Deal_ID__c</columns>
        <columns>EMC_Opportunity_ID__c</columns>
        <columns>EMC_Opportunity_Number__c</columns>
        <columns>Error_Messages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>EMC</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Integration User</value>
        </filters>
        <label>EMC Core Exception</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Exceptions_Last_1_Day</fullName>
        <columns>NAME</columns>
        <columns>Object_type__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Operation__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Error_Codes__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <label>Exceptions Last 1 Day</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity_Archive_Exception</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Process_Name__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Error_Messages__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity Archival</value>
        </filters>
        <filters>
            <field>Process_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity Re-Instate</value>
        </filters>
        <label>Opportunity Archive Exception</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity_Auto_Close</fullName>
        <columns>NAME</columns>
        <columns>Object_ID__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Process_Name__c</columns>
        <columns>Operation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Name__c</field>
            <operation>equals</operation>
            <value>Opportunity Auto Close</value>
        </filters>
        <label>Opportunity Auto Close</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SFDC_PIM_Integration</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Name__c</field>
            <operation>contains</operation>
            <value>PIM</value>
        </filters>
        <label>SFDC_PIM_Integration</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SSO_Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Object_type__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Operation__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Error_Codes__c</columns>
        <columns>Error_Messages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Boomi Integration User</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>SSO Exceptions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SSO_Exceptions_Last_7_Days</fullName>
        <booleanFilter>1 AND 2 AND( 3 OR 4 OR 5 )</booleanFilter>
        <columns>NAME</columns>
        <columns>Object_type__c</columns>
        <columns>Object_ID__c</columns>
        <columns>Operation__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Error_Codes__c</columns>
        <columns>Error_Messages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Boomi Integration User</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Object_type__c</field>
            <operation>contains</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>Object_type__c</field>
            <operation>contains</operation>
            <value>Contact</value>
        </filters>
        <filters>
            <field>Object_type__c</field>
            <operation>contains</operation>
            <value>User</value>
        </filters>
        <label>SSO Exceptions Last 7 Days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EX-{0000000000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>